--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,12 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
+# top-most EditorConfig file
 root = true
 
 [*]
-charset = utf-8
 indent_style = space
-end_of_line = lf
+end_of_line = crlf
+charset = utf-8
+trim_trailing_whitespace = false
 insert_final_newline = true
-trim_trailing_whitespace = true
 quote_type = single
